# kuma-rs

./: .example.env  .gitignore  Cargo.toml  README.md  install.sh  pak.toml  rdb.sh  xyz.toastxc.Kuma.desktop  xyz.toastxc.Kuma.yaml
.github/workflows/: rust.yml
examples/: demo.rs  gui.rs
src/: api.rs  lib.rs
