[package]
name = "kuma-rs"
version = "0.1.0"
edition = "2021"
description = "A simple and easy library for interacting with Uptime Kuma"
license = "GPL-3.0-only"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.12.1"
anyhow = "1.0.81"

[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1.36.0", features = ["full"] }