[package]
name = "kuma-rs"
version = "0.1.1"
edition = "2021"
description = "A simple and easy library for interacting with Uptime Kuma"
license = "GPL-3.0-only"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.12.1"
anyhow = "1.0.81"
env_logger = "0.11.3"

[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1.36.0", features = ["full"] }
egui = { version = "0.27.0", features = [ "persistence",  ] }

material-egui = "0.1.5"
eframe = { version = "0.27.0", features = ["persistence", "wayland"] }
notify-rust = { version = "4.10.0", features = ["env_logger"]}
gio = "0.19.3"
egui-notify = "0.14.0"
[[examples]]
name="demo"
path="examples/demo.rs"

[[examples]]
name="gui"
path="examples/gui.rs"


