[package]
name = "kuma-rs"
version = "0.1.1"
edition = "2021"
description = "A simple and easy library for interacting with Uptime Kuma"
license = "GPL-3.0-only"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.12.5"
anyhow = "1.0.86"

[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1.38.0", features = ["full"] }
egui = { version = "0.27.2", features = [ "persistence",  ] }
material-egui = "0.1.7"
eframe = { version = "0.27.2", features = ["persistence", "wayland"] }
#notify-rust = { version = "4.11.0", features = ["env_logger"]}
notify-rust = {version="4.11.3",  features=["env_logger", "d"], default-features = false}
# needed for Toasts
egui-notify = "0.14.0"
crossbeam-channel = "*"
run_once="0.1.2"

[[examples]]
name="demo"
path="examples/demo.rs"

[[examples]]
name="gui"
path="examples/gui.rs"


